# scoptrial

./: .gitignore  14scop.ipynb  Makefile  Pipfile  README.md  index.ipynb  index.md  pyproject.toml  scop_best_data.txt  scop_input.txt  scop_out.txt  settings.ini  temp-plot.html
docs/: 14scop.html  _config.yml  index.html  sidebar.json
docs/_data/: topnav.yml
docs/_data/sidebars/: home_sidebar.yml
scoptrial/: _nbdev.py  scop-linux  scop-mac  scop.py
