[tool.poetry]
name = "scoptrial"
version = "0.1.2"
description = ""
authors = ["mikiokubo <kubo@kaiyodai.ac.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.4"
plotly = "^4.13.0"
matplotlib = "^3.3.3"
nbdev = "^1.1.5"
jupyterlab = "^2.2.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
